<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="115dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rEasy"
            tools:text="facil" />

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/rMedium"
            tools:text="medio" />

        <RadioButton
            android:id="@+id/radioButtonHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/rHard"
            tools:text="dificil" />

        <RadioButton
            android:id="@+id/radioButtonVeryHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/rVeryHard"
            tools:text="muydificil" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="setupPartida"
        android:text="@string/bStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Empezar" />

    <Switch
        android:id="@+id/expansionActivadaSwitch"
        android:layout_width="227dp"
        android:layout_height="45dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:switchPadding="12dp"
        android:text="@string/sExpansionActivada"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>